<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/colorWhite">

    <EditText android:id="@+id/etIPAddress"
        style="@style/fullEditText"
        android:hint="@string/ip_address"
        android:imeOptions="actionNext"/>

    <EditText android:id="@+id/etDatabaseName"
        style="@style/fullEditText"
        android:hint="@string/database"
        android:imeOptions="actionNext"
        android:layout_marginTop="5dp" />

    <EditText android:id="@+id/etServerUser"
        style="@style/fullEditText"
        android:hint="@string/user"
        android:imeOptions="actionNext"
        android:layout_marginTop="5dp" />

    <EditText android:id="@+id/etServerPassword"
        style="@style/fullEditText"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:layout_marginTop="5dp"
        android:inputType="textPassword" />

    <LinearLayout style="@style/dialogBottom">

        <Button android:id="@+id/btnCancel"
            style="@style/styleSetupDialogCloseButton"
            android:text="@string/cancel"/>

        <Button android:id="@+id/btnOK"
            style="@style/styleSetupDialogSaveButton"
            android:text="@string/ok"/>

    </LinearLayout>

</LinearLayout>