<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <EditText android:id="@+id/etGroupName"
        style="@style/styleSetupDialogEditText"
        android:hint="Group Name"
        android:inputType="text"
        android:imeOptions="actionNext"/>

    <EditText android:id="@+id/etSubTitle"
        style="@style/styleSetupDialogEditText"
        android:hint="Sub Title"
        android:inputType="text"
        android:imeOptions="actionDone"/>

    <TextView style="@style/dialogSubTitle"
        android:text="@string/check_type" />

    <RadioButton android:id="@+id/rdoAllowSingle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allow_single"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorBlackLight"
        android:textSize="@dimen/regular_text_size"
        android:textStyle="bold"
        android:checked="true"/>

    <RadioButton android:id="@+id/rdoAllowMulti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allow_multi"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorBlackLight"
        android:textSize="@dimen/regular_text_size"
        android:textStyle="bold"/>

    <LinearLayout style="@style/dialogBottom">

        <Button android:id="@+id/btnClose"
            style="@style/styleSetupDialogCloseButton"/>

        <Button android:id="@+id/btnSave"
            style="@style/styleSetupDialogSaveButton"/>

    </LinearLayout>
</LinearLayout>