<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/taste_dialog_bg"
    android:padding="10dp">

    <LinearLayout  android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <customfont.BOSTextView android:id="@+id/tvTaste"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="@dimen/regular_text_size"
            android:hint="Taste"
            android:background="@color/colorWarning"/>

        <Button android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGreen"
            android:textSize="@dimen/small_text_size"
            android:background="@drawable/bg_gray_5r"
            android:text="@string/clear"
            android:layout_marginLeft="10dp"
            android:textAllCaps="false"/>
    </LinearLayout>

    <GridView android:id="@+id/gvTaste"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:numColumns="5"
        android:layout_marginTop="5dp"
        tools:listitem="@layout/list_taste"/>

    <LinearLayout  android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <EditText android:id="@+id/etCustomTaste"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="@dimen/large_text_size"
            android:hint="Custom Taste"
            android:background="@color/colorGray1"
            android:inputType="text"
            android:imeOptions="actionDone"/>

        <Button android:id="@+id/btnTasteAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:textSize="@dimen/small_text_size"
            android:background="@drawable/bg_primary_5r"
            android:text="@string/add"
            android:layout_marginLeft="10dp"></Button>
    </LinearLayout>

    <LinearLayout style="@style/dialogBottom">

        <Button android:id="@+id/btnCancel"
            style="@style/styleSetupDialogCloseButton"
            android:text="@string/cancel"/>

        <Button android:id="@+id/btnOK"
            style="@style/styleSetupDialogSaveButton"
            android:text="@string/ok"/>

    </LinearLayout>

</LinearLayout>
