<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SaleActivity"
    android:background="@mipmap/background">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="#CC17476E">

        <LinearLayout android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|left">
        </LinearLayout>

        <LinearLayout android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="30dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <LinearLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp"
                    android:background="@drawable/login_layout_bg"
                    android:gravity="center">

                    <TextView android:id="@+id/tvTitleLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/waiter_login"
                        android:textColor="@color/colorGray1"
                        android:textSize="@dimen/larger_text_size"/>

                    <Spinner android:id="@+id/spUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/login_spinner_bg"
                        android:popupBackground="@color/colorPrimary"/>

                    <EditText android:id="@+id/txtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_hiht"
                        android:textSize="@dimen/regular_text_size"
                        android:singleLine="true"
                        android:layout_marginTop="15dp"
                        android:inputType="textPassword"
                        android:background="#CC33333F"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorGray1"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:focusable="false"/>

                    <Button android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:textColor="@color/colorBlackLight"
                        android:background="@drawable/bg_accent_5r"
                        android:textSize="@dimen/regular_text_size"
                        android:textStyle="bold"
                        style="?android:attr/buttonBarButtonStyle"
                        android:padding="10dp"
                        android:layout_marginTop="20dp"/>

                    <Button android:id="@+id/btnExit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/exit"
                        android:textColor="@color/colorBlackLight"
                        android:textStyle="bold"
                        android:padding="15dp"
                        android:layout_marginTop="30dp"
                        android:textAllCaps="false"/>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/colorPrimaryDark">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:textColor="@color/colorGray2"
            android:textSize="13sp"
            android:layout_gravity="center|left"/>
    </LinearLayout>
</LinearLayout>

